--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -50,9 +50,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 4 is greater than 0\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter the number'))\n",
     "\n",
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,9 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The score  60 is less than or equal to 90\n"
+     ]
+    }
+   ],
    "source": [
     "x = input(\"Enter your score\")\n",
     "\n",
@@ -86,9 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The grade : A\n"
+     ]
+    }
+   ],
    "source": [
     "score = int(input('Enter your score'))\n",
     "if score > 90:\n",
@@ -113,9 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 50 is even number\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter a number'))\n",
     "if number % 2 == 0:\n",
@@ -137,13 +169,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 40 is less than or equal to 100\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter a number'))\n",
     "\n",
-    "# Complete the code"
+    "# Complete the code\n",
+    "if number <= 100:\n",
+    "    print(f'The number {number} is less than or equal to 100')\n",
+    "else:\n",
+    "    print(f'The number {number} is less than or equal to 100')"
    ]
   },
   {
@@ -159,14 +203,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "name = input('Enter a name')\n",
     "\n",
-    "if # complete the code\n",
+    "if name[0].upper() == 'A': # complete the code\n",
     "    result = True\n",
+    "else:\n",
+    "    result = False\n",
+    "print(result)\n",
     "    \n",
     "    "
    ]
@@ -185,9 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two value are same\n"
+     ]
+    }
+   ],
    "source": [
     "val1 = 12.34; val2 = 12.340000000000000001\n",
     "\n",
@@ -197,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,14 +285,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The greater word is: van\n"
+     ]
+    }
+   ],
    "source": [
     "strval1 = input('Enter a word')\n",
     "strval2 = input('Enter a word')\n",
     "\n",
-    "# complete the code"
+    "# complete the code\n",
+    "if strval1 > strval2:\n",
+    "    print(f'The greater word is: {strval1}')\n",
+    "else:\n",
+    "    print(f'The greater word is: {strval2}')"
    ]
   },
   {
@@ -248,14 +323,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The longer word is: world\n"
+     ]
+    }
+   ],
    "source": [
     "strval1 = input('Enter a word')\n",
     "strval2 = input('Enter a word')\n",
     "\n",
-    "# complete the code\n"
+    "# complete the code\n",
+    "if len(strval1) > len(strval2):\n",
+    "    print(f'The longer word is: {strval1}')\n",
+    "else:\n",
+    "    print(f'The longer word is: {strval2}')"
    ]
   },
   {
@@ -292,9 +379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The grade : B\n"
+     ]
+    }
+   ],
    "source": [
     "# Take one user input \n",
     "# if it is even number, print \n",
@@ -311,9 +406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The score  50 is less than or equal to 80\n"
+     ]
+    }
+   ],
    "source": [
     "x = int(input(\"Enter your score\"))\n",
     "\n",
@@ -343,13 +446,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The final grade is: D\n"
+     ]
+    }
+   ],
    "source": [
     "score = int(input('Enter a score'))\n",
     "\n",
-    "# complete the code\n"
+    "# complete the code\n",
+    "if score > 90:\n",
+    "    grade = 'A'\n",
+    "elif score > 80:\n",
+    "    grade = 'B'\n",
+    "elif score > 70:\n",
+    "    grade = 'c'\n",
+    "elif score > 60:\n",
+    "    grade = 'D'\n",
+    "else:\n",
+    "    grade = 'F'\n",
+    "print(f'The final grade is: {grade}')\n"
    ]
   },
   {
@@ -1409,7 +1531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.12.4"
   },
   "orig_nbformat": 4,
   "vscode": {
