--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -490,13 +490,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter a number'))\n",
     "\n",
-    "# complete the code\n"
+    "# complete the code\n",
+    "if number == 0:\n",
+    "    print('Zero')\n",
+    "elif number % 2 == 0:\n",
+    "    print('Even')\n",
+    "else:\n",
+    "    print('Odd')\n"
    ]
   },
   {
@@ -520,13 +534,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case 2\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter a number'))\n",
     "\n",
-    "# complete the code"
+    "# complete the code\n",
+    "if number < 0:\n",
+    "    print(\"Case 1\")\n",
+    "elif number >= 0 and number < 100:\n",
+    "    print(\"Case 2\")\n",
+    "else:\n",
+    "    print(\"Case 3\")"
    ]
   },
   {
@@ -554,14 +582,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100  is greater thatn 100\n"
+      "20  is less than 50\n"
      ]
     }
    ],
@@ -581,15 +609,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n",
-      "8  is even number\n"
+      "39\n",
+      "39  is odd number\n"
      ]
     }
    ],
@@ -621,9 +649,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number 60 is greater than or equal to 0 and less than 100\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter a number'))\n",
     "\n",
