--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The number 4 is greater than 0\n"
+      "The number 10 is greater than 0\n"
      ]
     }
    ],
@@ -694,17 +694,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Range 3\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter a number'))\n",
     "\n",
     "if number < 0:\n",
     "    range = 1\n",
     "else:\n",
-    "    if # complete the code\n",
-    "        range = 2"
+    "    if number < 100: # complete the code\n",
+    "        range = 2\n",
+    "    else:\n",
+    "        range = 3\n",
+    "print(f'Range {range}')\n",
+    "    "
    ]
   },
   {
@@ -727,19 +739,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The smallest number is: 50\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = int(input('Enter a number '))\n",
     "num2 = int(input('Enter a number '))\n",
     "num3 = int(input('Enter a number '))\n",
     "\n",
     "if num1 < num2:\n",
-    "    # Complete the code. Only use Nested-If structure. If - else\n",
+    "   if num1 < num3:\n",
+    "       smallest = num1\n",
+    "   else:\n",
+    "       smallest = num3\n",
+    "else:\n",
+    "    if num2 < num3:\n",
+    "        smallest = num2\n",
+    "    else:\n",
+    "        smallest = num3   # Complete the code. Only use Nested-If structure. If - else\n",
     "    # No and/or \n",
     "    # No elif\n",
-    "    "
+    "print(f'The smallest number is: {smallest}')"
    ]
   },
   {
@@ -771,9 +799,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score is out of range\n"
+     ]
+    }
+   ],
    "source": [
     "score = int(input(\"Enter your score\"))\n",
     "\n",
@@ -784,9 +820,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200  is less than 0 or greater than 100\n"
+     ]
+    }
+   ],
    "source": [
     "# Take the score\n",
     "# Check the scoer is between 0 and 100\n",
@@ -815,16 +859,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num1 is positive\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = int(input('Enter the num1'))\n",
     "num2 = int(input('Enter the num2'))\n",
     "\n",
     "if num1 > 0 and num2 > 0:\n",
     "    print ('Two values are positive')\n",
-    "elif # complete the code\n"
+    "elif num1 > 0 and num2 <= 0: \n",
+    "    print('num1 is positive')\n",
+    "elif num1 <= 0 and num2 > 0: \n",
+    "    print('num2 is positive')\n",
+    "else:\n",
+    "    print('Neither value is positive') # complete the code\n"
    ]
   },
   {
@@ -844,16 +901,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Two values are positive\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = int(input('Enter the num1'))\n",
     "num2 = int(input('Enter the num2'))\n",
     "\n",
     "if num1 > 0:\n",
-    "    # complete the code\n",
+    "   if num2 > 0:\n",
+    "       print('Two values are positive')\n",
+    "   else: \n",
+    "       print('num1 is positive')\n",
     "else:\n",
+    "    if num2 > 0:\n",
+    "      print('num2 is positive')    # complete the code\n",
+    "    \n",
+    "    \n",
     "    # complete the code"
    ]
   },
@@ -881,14 +953,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "One of two values are less than 0\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = -10\n",
     "num2 = 20\n",
     "\n",
-    "if # complete your code\n",
+    "if num1 <= 0 or num2 <= 0: # complete your code\n",
     "    print ('One of two values are less than 0')\n"
    ]
   },
