--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -990,13 +990,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num1 is greater than 0 and less than 100\n"
+     ]
+    }
+   ],
    "source": [
     "num1 = int(input('Enter a number'))\n",
     "\n",
-    "if # complete the same condition without \"and\" operator as num1 > 0 and num1 < 100\n",
+    "if 0 < num1 < 100: # complete the same condition without \"and\" operator as num1 > 0 and num1 < 100\n",
     "# if num1 > 0 and num1 < 100:\n",
     "    print ('num1 is greater than 0 and less than 100')"
    ]
@@ -1015,13 +1023,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 80 is greater than 50 and less than 100\n"
+     ]
+    }
+   ],
    "source": [
     "number = int(input('Enter the number'))\n",
     "\n",
-    "if # complete the code"
+    "if 50 < number < 100:\n",
+    "    print(f'The number {number} is greater than 50 and less than 100') # complete the code"
    ]
   },
   {
@@ -1043,14 +1060,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num = # set your value to num to make the conditino True\n",
-    "\n",
+    "num = 50  # set your value to num to make the conditino True\n",
     "if num < 0 and num > 100:\n",
-    "    print ('Condition True')"
+    "    print ('Condition is True')"
    ]
   },
   {
