--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -1109,9 +1109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100  is less than  90\n"
+     ]
+    }
+   ],
    "source": [
     "score1 = 100\n",
     "score2 = 90\n",
@@ -1136,9 +1144,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num  = 22\n",
     "even = 1 if num % 2 == 0 else 0\n",
@@ -1147,9 +1166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100  is greater than 90\n"
+     ]
+    }
+   ],
    "source": [
     "print (score2, \" is greater than \", score1) if ( score1 < score2) else print(score1, \" is greater than\", score2)"
    ]
@@ -1163,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1258,7 @@
        "False"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,16 +1269,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "True and True and True # will return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1312,7 @@
        "False"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,9 +1326,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num1 = 10; num2 = 20; \n",
     "\n",
@@ -1300,9 +1349,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num1 = 10; num2 = 20; \n",
     "\n",
@@ -1312,9 +1372,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "a = 10\n",
     "b = 5\n",
@@ -1326,9 +1395,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "a = 10\n",
     "b = 5\n",
@@ -1338,9 +1415,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "l1 = [1,2,3,4,5]\n",
     "\n",
@@ -1367,13 +1452,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flag is set to: 1\n"
+     ]
+    }
+   ],
    "source": [
     "num = int(input('Enter a num: '))\n",
     "\n",
-    "flag = 0 # complete this code"
+    "flag = 0 if num < 0 else 1\n",
+    "print(f'Flag is set to: {flag}')         # complete this code"
    ]
   },
   {
