--- a/ch03.ipynb
+++ b/ch03.ipynb
@@ -1505,9 +1505,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary  is greater than or equal to Macy\n"
+     ]
+    }
+   ],
    "source": [
     "name1 = 'Mary'\n",
     "name2 = 'Macy'\n",
@@ -1521,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1556,9 +1564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mary  is shorter than Mariella\n"
+     ]
+    }
+   ],
    "source": [
     "name1 = 'Mary'\n",
     "name2 = 'Mariella'\n",
@@ -1600,9 +1616,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'BANANA'.isupper()\n",
     "\n",
@@ -1615,9 +1642,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'three!'"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "'   spacious   '.lstrip()\n",
@@ -1631,9 +1669,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name@company\n",
+      "company.com\n",
+      "name@company.com\n"
+     ]
+    }
+   ],
    "source": [
     "email_str = \"name@company.com\"\n",
     "result1 = email_str.rstrip(\".com\" )\n",
@@ -1645,9 +1693,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "@company.com\n",
+      "@c\n",
+      "@company.com\n",
+      "@company.com\n",
+      "@company.com\n"
+     ]
+    }
+   ],
    "source": [
     "email_str = \"name@company.com\"\n",
     "idx = email_str.find('@')\n",
@@ -1668,9 +1729,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Monty'"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "'   spacious   '.rstrip()\n",
@@ -1684,9 +1756,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'example'"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -1710,19 +1793,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 10\n",
+      "20\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "input_str = input('Enter two numbers')\n",
     "print (input_str)\n",
     "x,y = input_str.split() \n",
-    "print (int(x))\n",
-    "print (int(y))\n",
-    "\n",
-    "x,y = int(input('Enter two numbers').split())\n",
-    "print (int(x))\n",
-    "print (int(y))\n",
+    "x = int(x)\n",
+    "y = int(y)\n",
+    "print (x)\n",
+    "print (y)\n",
     "\n",
     "\n",
     "\n"
